# webgwas-analysis

./: .gitignore  .gitmodules  README.md  pyproject.toml
analyses/1.validate-indirect-gwas/: 1-simulate-data.ipynb  2-setup-comparison.ipynb  3-indirect-gwas.ipynb  4-plot-results.ipynb  _debug-regenie-scaling.ipynb  _debug-saige-v2.ipynb  _debug-saige.ipynb  _saige-run.ipynb
analyses/2.fit-quality/: 1-anonymize-data.ipynb  1-build-phenotypes.ipynb  1-make-random-phenotypes.py.ipynb  2-generate-random-phenotypes.ipynb  2-gwas.ipynb  2-simple-generate.ipynb  3-evaluate-phenotype-fit.ipynb  3-gather-results.ipynb  3-plot.ipynb  4-generate-noise-phenotypes.ipynb  4-plot-pheno-vs-gwas.ipynb  4-plot-results.ipynb  4-run-gwas.ipynb  5-gather-results.ipynb  5-plot-noise.ipynb  5-plot-pheno-vs-gwas.ipynb  5-plot-results.ipynb  6-inspect-outliers.ipynb  6-plot-results.ipynb  _1-make-random-phenotypes.py.ipynb
analyses/2.fit-quality/data/: phenotype_vs_gwas_r2.parquet
analyses/3.pca/: 1.generate-phenotypes.ipynb  2-plot-python.ipynb
analyses/4.portability/: 1.gather-cedars-data.ipynb
nb/fit-quality/: 2-run-gwas.ipynb  3-extract-gwas.py.ipynb  4-plot-results.R.ipynb
src/webgwas_analysis/: linearize.py  phecodes.py
