[project]
name = "webgwas-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.0",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.12.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.2",
    "patchworklib>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
